--- a/index.html
+++ b/index.html
@@ -8,41 +8,84 @@
 </head>
 <body>
 
+    <!-- HEADER -->
     <header>
-        <!-- Logo -->
-        <img src="assets/logo.svg" alt="Missed Call Agent Logo" id="logo">
+        <div class="logo-container">
+            <img src="assets/logo.svg" alt="Missed Call Agent Logo" id="logo">
+            <h1>Missed Call Agent</h1>
+        </div>
+        <button class="cta-button" onclick="scrollToForm()">Sign Up</button>
     </header>
 
+    <!-- HERO SECTION -->
     <section class="hero">
-        <h1>Are missed calls costing your business thousands?</h1>
-        <p>Our AI-powered solution handles calls so you can focus on running your business, not chasing leads.</p>
-
-        <!-- Video Section -->
+        <h2>Turn Missed Calls into Booked Appointments</h2>
+        <p>Are missed calls costing your business thousands? Our AI-powered solution handles calls so you can focus on running your business, not chasing leads.</p>
+        
         <div class="video-container">
             <video autoplay muted loop>
                 <source src="assets/MCAvideodemo.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
-
-        <button class="cta-button">Get Early Access</button>
     </section>
 
+    <!-- SIGN-UP FORM -->
+    <section class="signup-form" id="signup">
+        <div class="signup-container">
+            <!-- Left Column: Form -->
+            <div class="form-container">
+                <h2>Get Early Access</h2>
+                <form id="accessForm">
+                    <input type="text" name="name" placeholder="Name *" required>
+                    <input type="email" name="email" placeholder="Email *" required>
+                    <input type="text" name="business" placeholder="Business Name *" required>
+                    <button type="submit" class="cta-button">Submit</button>
+                </form>
+                <p id="confirmation-message" class="hidden">Thanks for your interest in Missed Call Agent, we will get with you as soon as possible!</p>
+            </div>
+
+            <!-- Right Column: Image -->
+            <div class="image-container">
+                <img src="assets/image1.jpg" alt="Feature 1">
+            </div>
+        </div>
+    </section>
+
+    <!-- ABOUT SECTION -->
     <section class="about">
-        <h2>About Missed Call Agent</h2>
-        <p>Missed Call Agent is a revolutionary app designed to help HVAC, Electrician, and Plumbers manage missed calls effectively. Your AI agent ensures that no call goes unanswered, captures customer details, and automatically books services, leading to increased revenue for you.</p>
+        <div class="about-container">
+            <!-- Left Column: Text -->
+            <div class="text-container">
+                <h2>About Missed Call Agent</h2>
+                <p>Missed Call Agent is a revolutionary app designed to help HVAC, Electrician, and Plumbers manage missed calls effectively. Your AI agent ensures that no call goes unanswered, captures customer details, and automatically books services, leading to increased revenue for you.</p>
+                <button class="cta-button" onclick="scrollToForm()">Get Early Access</button>
+                <img src="assets/image2.jpg" alt="Feature 2">
+            </div>
+
+            <!-- Right Column: Image -->
+            <div class="image-container">
+                <img src="assets/image3.jpg" alt="Feature 3">
+            </div>
+        </div>
     </section>
 
-    <section class="images">
-        <h2>How It Works</h2>
-        <img src="assets/image1.jpg" alt="Feature 1">
-        <img src="assets/image2.jpg" alt="Feature 2">
-        <img src="assets/image3.jpg" alt="Feature 3">
-    </section>
-
+    <!-- PRIVACY POLICY -->
     <footer>
-        <p>© 2025 Missed Call Agent. All rights reserved.</p>
+        <p>© 2025 Missed Call Agent. All rights reserved.<br>Your privacy is important to us. We’ll only use your information to contact you about Missed Call Agent.</p>
     </footer>
+
+    <script>
+        function scrollToForm() {
+            document.getElementById("signup").scrollIntoView({ behavior: 'smooth' });
+        }
+
+        document.getElementById("accessForm").addEventListener("submit", function(event) {
+            event.preventDefault();
+            document.getElementById("accessForm").style.display = "none";
+            document.getElementById("confirmation-message").classList.remove("hidden");
+        });
+    </script>
 
 </body>
 </html>
