--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         </div>
     </section>
 
-    <!-- SIGN-UP FORM -->
+    <!-- SIGN-UP FORM SECTION -->
     <section class="signup-form" id="signup">
-        <div class="signup-container">
+        <div class="container">
             <!-- Left Column: Form -->
-            <div class="form-container">
+            <div class="column">
                 <h2>Get Early Access</h2>
                 <form id="accessForm">
                     <input type="text" name="name" placeholder="Name *" required>
@@ -46,7 +46,7 @@
             </div>
 
             <!-- Right Column: Image -->
-            <div class="image-container">
+            <div class="column">
                 <img src="assets/image1.jpg" alt="Feature 1">
             </div>
         </div>
@@ -54,9 +54,9 @@
 
     <!-- ABOUT SECTION -->
     <section class="about">
-        <div class="about-container">
+        <div class="container">
             <!-- Left Column: Text -->
-            <div class="text-container">
+            <div class="column">
                 <h2>About Missed Call Agent</h2>
                 <p>Missed Call Agent is a revolutionary app designed to help HVAC, Electrician, and Plumbers manage missed calls effectively. Your AI agent ensures that no call goes unanswered, captures customer details, and automatically books services, leading to increased revenue for you.</p>
                 <button class="cta-button" onclick="scrollToForm()">Get Early Access</button>
@@ -64,7 +64,7 @@
             </div>
 
             <!-- Right Column: Image -->
-            <div class="image-container">
+            <div class="column">
                 <img src="assets/image3.jpg" alt="Feature 3">
             </div>
         </div>
