--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         </div>
     </section>
 
-    <!-- SIGN-UP FORM SECTION -->
+    <!-- SIGN-UP FORM SECTION (LEFT: FORM, RIGHT: IMAGE) -->
     <section class="signup-form" id="signup">
         <div class="container">
             <!-- Left Column: Form -->
-            <div class="column">
+            <div class="column text-column">
                 <h2>Get Early Access</h2>
                 <form id="accessForm">
                     <input type="text" name="name" placeholder="Name *" required>
@@ -46,25 +46,25 @@
             </div>
 
             <!-- Right Column: Image -->
-            <div class="column">
+            <div class="column image-column">
                 <img src="assets/image1.jpg" alt="Feature 1">
             </div>
         </div>
     </section>
 
-    <!-- ABOUT SECTION -->
+    <!-- ABOUT SECTION (LEFT: TEXT & BUTTON, IMAGE BELOW TEXT | RIGHT: MAIN IMAGE) -->
     <section class="about">
         <div class="container">
-            <!-- Left Column: Text -->
-            <div class="column">
+            <!-- Left Column: Text & Small Image -->
+            <div class="column text-column">
                 <h2>About Missed Call Agent</h2>
                 <p>Missed Call Agent is a revolutionary app designed to help HVAC, Electrician, and Plumbers manage missed calls effectively. Your AI agent ensures that no call goes unanswered, captures customer details, and automatically books services, leading to increased revenue for you.</p>
                 <button class="cta-button" onclick="scrollToForm()">Get Early Access</button>
-                <img src="assets/image2.jpg" alt="Feature 2">
+                <img src="assets/image2.jpg" alt="Feature 2" class="small-image">
             </div>
 
-            <!-- Right Column: Image -->
-            <div class="column">
+            <!-- Right Column: Large Image -->
+            <div class="column image-column">
                 <img src="assets/image3.jpg" alt="Feature 3">
             </div>
         </div>
