--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         };
 
         try {
-            const response = await fetch("YOUR_NEW_GOOGLE_SHEET_WEB_APP_URL", {
+            const response = await fetch("https://script.google.com/macros/s/AKfycbzrgDvAZvk9-g5Ww4I6TznUbf_LZMDC9-VwB3if3RI5DasCsEBHnYgEJPhVBtpxtVvRqg/exec", {
                 method: "POST",
                 headers: { 
                     "Content-Type": "application/json"
