Update submission form index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="column text-column">
                 <h2>Get Early Access</h2>
 
-                <!-- HTML Form Submission -->
+                <!-- HTML Form Submission (Direct to Google Sheets Web App) -->
                 <form 
                   method="POST" 
                   action="https://script.google.com/macros/s/AKfycbwfICumV-Q3h2IXQ4V7P1w8RN-daeNiH3r95a3nRGUUL6jNAIsoAf-ZPBt4DjluQl8LxQ/exec"
