--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                   
                     <input name="Name" type="text" placeholder="Name" required>
                     <input name="Email" type="email" placeholder="Email" required>
-                    <input name="Business" type="text" placeholder="Business Name" required>
+                    <input name="Business Name" type="text" placeholder="Business Name" required>
                     <button type="submit" class="cta-button">Submit</button>
                 </form>
 
