--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
         document.querySelector("form").addEventListener("submit", function() {
             setTimeout(function() {
                 if (submitted) {
+                    document.querySelector("form").style.display = "none"; // Hide form
                     document.getElementById("confirmation-message").style.display = "block";
                 }
             }, 1000);
