--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
 
                 <!-- Confirmation Message -->
-                <p id="confirmation-message" class="hidden">Thanks for your interest in Missed Call Agent, we will get with you as soon as possible!</p>
+                <p id="confirmation-message" class="hidden">Your information has been submitted. Thanks for your interest in Missed Call Agent, we will get with you as soon as possible!</p>
             </div>
 
             <!-- Right Column: Image -->
