--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                   target="hidden_iframe"
                   onsubmit="document.getElementById('timestamp').value = new Date().toISOString(); submitted=true;">
                   
-                    <input name="Name" type="text" placeholder="Name" required>
-                    <input name="Email" type="email" placeholder="Email" required>
-                    <input name="Business Name" type="text" placeholder="Business Name" required>
+                    <input name="Name" type="text" placeholder="Name*" required>
+                    <input name="Email" type="email" placeholder="Email*" required>
+                    <input name="Business Name" type="text" placeholder="Business Name*" required>
                     <input type="hidden" id="timestamp" name="Timestamp">
                     <button type="submit" class="cta-button">Submit</button>
                 </form>
