add gif index.html

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
                 Your browser does not support the video tag.
             </video>
         </div>
+
+        <!-- GIF Below the Video -->
+        <div class="gif-container">
+            <img src="assets/MCAvideodemo.gif" alt="Missed Call Agent Demo GIF">
+        </div>
     </section>
 
     <!-- SIGN-UP FORM SECTION -->
