Removed Video leaving GIF -  index.html

--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
         <h2>Turn Missed Calls into Booked Appointments</h2>
         <p>Are missed calls costing your business thousands? Our AI-powered solution handles calls so you can focus on running your business, not chasing leads.</p>
         
+       <!-- Video Commented Out 
         <div class="video-container">
             <video autoplay muted loop>
                 <source src="assets/MCAvideodemo.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
-        </div>
+        </div> -->
 
         <!-- GIF Below the Video -->
         <div class="gif-container">
