Updated GIF index.html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <!-- GIF Below the Video -->
         <div class="gif-container">
-            <img src="assets/MCAvideodemo.gif" alt="Missed Call Agent Demo GIF">
+            <img src="assets/MCAvideo.gif" alt="Missed Call Agent Demo GIF">
         </div>
     </section>
 
