--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h2>Turn Missed Calls into Booked Appointments</h2>
         <p>Are missed calls costing your business thousands? Our AI-powered solution handles calls so you can focus on running your business, not chasing leads.</p>
         
-       <!-- Video Commented Out 
+       <!-- Video Commented Out, remove comments and upload video to assets (make sure to change name) if wanting to add it back)
         <div class="video-container">
             <video autoplay muted loop>
                 <source src="assets/MCAvideodemo.mp4" type="video/mp4">
