--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div> -->
 
         <!-- GIF Below the Video -->
-        <div class="gif-container">
+        <div class="gif-container" onclick="scrollToForm()">
             <img src="assets/MCAvideo.gif" alt="Missed Call Agent Demo GIF">
         </div>
     </section>
