swap image 3 for convoUI gif index.html

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
             <!-- Right Column: Large Image -->
             <div class="column image-column">
-                <img src="assets/image3.jpg" alt="Feature 3"> <!-- Recommended Image Size: 600x400px, JPG/PNG format -->
+                <img src="assets/ConvoUI.gif" alt="Example of the Automated Conversation"> <!-- Added GIF - Recommended Image Size: 600x400px, JPG/PNG format -->
             </div>
         </div>
     </section>
