--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Missed Call Agent | AI Call-Answering for Service Providers</title> <!-- Page title shown in browser tab -->
     <link rel="stylesheet" href="styles.css"> <!-- Links to external CSS file for styling -->
 </head>
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6VKZQ4WFEC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6VKZQ4WFEC');
+</script>
+    
 <body>
 
     <!-- HEADER SECTION -->
