updated copy index.html

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 
     <!-- HERO SECTION -->
     <section class="hero">
-        <h2>Turn Missed Calls into Booked Appointments</h2> <!-- Main tagline -->
-        <p>Are missed calls costing your business thousands? Our AI-powered solution handles calls so you can focus on running your business, not chasing leads.</p>
+        <h2>Missed Calls = Missed Revenue. Fix It.</h2> <!-- Main tagline -->
+        <p>27% of service calls go unanswered-costing you jobs and revenue.</p>
+        <p><strong>Missed Call Agent answers, qualifies, and books your customers automatically, so you never lose a lead again.</strong></p>
         
        <!-- Video Section (Commented Out: To enable, remove comments and upload video) -->
        <!-- Recommended Video Size: 1920x1080px, MP4 format, optimized for web -->
@@ -57,7 +58,8 @@
         <div class="container">
             <!-- Left Column: Sign-up Form -->
             <div class="column text-column">
-                <h2>Get Early Access</h2>
+                <h2>Get Early Access - Starts at $100/Month</h2>
+                <p><strong>Instantly answer calls, book customers, adn recover lost revenue:</strong></p>
 
                 <!-- Form for collecting user data, submits to Google Sheets via Apps Script -->
                 <form 
@@ -93,8 +95,14 @@
         <div class="container">
             <!-- Left Column: Description and Call-to-Action -->
             <div class="column text-column">
-                <h2>About Missed Call Agent</h2>
-                <p>Missed Call Agent is a revolutionary app designed to help HVAC, Electrician, and Plumbers manage missed calls effectively. Your AI agent ensures that no call goes unanswered, captures customer details, and automatically books services, leading to increased revenue for you.</p>
+                <h2>AI Answers. SChedules. Grows Your Business.</h2>
+                <p>Missed Call Agent is there for you 24/7, built for HVAC, Electricians, and Plumbers.</p>
+                <ul style="text-align: left; max-width: 600px; margin: 0 auto;">
+                    <li><strong>Never Miss a Lead Again:</strong> Every call is answered instantly.</li>
+                    <li><strong>Appointments Booked for You:</strong> Customers schedule themselves-automatically.</li>
+                    <li><strong>Pays for Iteself:</strong> Just <strong>1 booked job increases ROI</strong>.</li>
+                </ul>
+                <p><strong>Early access starts at $100/month. Secure your spot today.</strong></p>
                 <button class="cta-button" onclick="scrollToForm()">Get Early Access</button>
                 <img src="assets/image2.jpg" alt="Feature 2" class="small-image"> <!-- Supporting image (Recommended: 500x300px, PNG format) -->
             </div>
@@ -108,6 +116,7 @@
 
     <!-- FOOTER / PRIVACY POLICY -->
     <footer>
+        <p><strong>100% ROI Guarantee:</strong> If Missed Call Agent doesn't generate at least it's monthly cost in booked jobs within the first month, you don't pay.</p>
         <p>© 2025 Missed Call Agent. All rights reserved.<br>Your privacy is important to us. We’ll only use your information to contact you about Missed Call Agent.</p>
     </footer>
 
