--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <!-- Left Column: Sign-up Form -->
             <div class="column text-column">
                 <h2>Get Early Access - Starts at $100/Month</h2>
-                <p><strong>Instantly answer calls, book customers, adn recover lost revenue:</strong></p>
+                <p><strong>Instantly answer calls, book customers, and recover lost revenue:</strong></p>
 
                 <!-- Form for collecting user data, submits to Google Sheets via Apps Script -->
                 <form 
@@ -95,13 +95,15 @@
         <div class="container">
             <!-- Left Column: Description and Call-to-Action -->
             <div class="column text-column">
-                <h2>AI Answers. SChedules. Grows Your Business.</h2>
+                <h2>AI Answers. Schedules. Grows Your Business.</h2>
                 <p>Missed Call Agent is there for you 24/7, built for HVAC, Electricians, and Plumbers.</p>
+                <p> </p>
                 <ul style="text-align: left; max-width: 600px; margin: 0 auto;">
                     <li><strong>Never Miss a Lead Again:</strong> Every call is answered instantly.</li>
                     <li><strong>Appointments Booked for You:</strong> Customers schedule themselves-automatically.</li>
                     <li><strong>Pays for Iteself:</strong> Just <strong>1 booked job increases ROI</strong>.</li>
                 </ul>
+                <p></p>
                 <p><strong>Early access starts at $100/month. Secure your spot today.</strong></p>
                 <button class="cta-button" onclick="scrollToForm()">Get Early Access</button>
                 <img src="assets/image2.jpg" alt="Feature 2" class="small-image"> <!-- Supporting image (Recommended: 500x300px, PNG format) -->
