--- a/index.html
+++ b/index.html
@@ -96,15 +96,15 @@
             <!-- Left Column: Description and Call-to-Action -->
             <div class="column text-column">
                 <h2>AI Answers. Schedules. Grows Your Business.</h2>
-                <p>Missed Call Agent is there for you 24/7, built for HVAC, Electricians, and Plumbers.</p>
-                <p> </p>
+                <p>Missed Call Agent is there for you 24/7, built for HVAC, Electricians, and Plumbers.<br></p>
+        
                 <ul style="text-align: left; max-width: 600px; margin: 0 auto;">
                     <li><strong>Never Miss a Lead Again:</strong> Every call is answered instantly.</li>
                     <li><strong>Appointments Booked for You:</strong> Customers schedule themselves-automatically.</li>
                     <li><strong>Pays for Iteself:</strong> Just <strong>1 booked job increases ROI</strong>.</li>
                 </ul>
-                <p></p>
-                <p><strong>Early access starts at $100/month. Secure your spot today.</strong></p>
+
+                <p><strong><br>Early access starts at $100/month. Secure your spot today.</strong></p>
                 <button class="cta-button" onclick="scrollToForm()">Get Early Access</button>
                 <img src="assets/image2.jpg" alt="Feature 2" class="small-image"> <!-- Supporting image (Recommended: 500x300px, PNG format) -->
             </div>
