--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
             <!-- Left Column: Description and Call-to-Action -->
             <div class="column text-column">
                 <h2>AI Answers. Schedules. Grows Your Business.</h2>
-                <p>Missed Call Agent is there for you 24/7, built for HVAC, Electricians, and Plumbers.<br></p>
+                <p>Missed Call Agent is there for you 24/7, built for HVAC, Electricians, and Plumbers.</p>
         
                 <ul style="text-align: left; max-width: 600px; margin: 0 auto;">
-                    <li><strong>Never Miss a Lead Again:</strong> Every call is answered instantly.</li>
+                    <li><strong><br>Never Miss a Lead Again:</strong> Every call is answered instantly.</li>
                     <li><strong>Appointments Booked for You:</strong> Customers schedule themselves-automatically.</li>
                     <li><strong>Pays for Iteself:</strong> Just <strong>1 booked job increases ROI</strong>.</li>
                 </ul>
