--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <p>Missed Call Agent is there for you 24/7, built for HVAC, Electricians, and Plumbers.</p>
         
                 <ul style="text-align: left; max-width: 600px; margin: 0 auto;">
-                    <li><strong><br>Never Miss a Lead Again:</strong> Every call is answered instantly.</li>
+                    <br><li><strong>>Never Miss a Lead Again:</strong> Every call is answered instantly.</li>
                     <li><strong>Appointments Booked for You:</strong> Customers schedule themselves-automatically.</li>
                     <li><strong>Pays for Iteself:</strong> Just <strong>1 booked job increases ROI</strong>.</li>
                 </ul>
