--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <p>Missed Call Agent is there for you 24/7, built for HVAC, Electricians, and Plumbers.</p>
         
                 <ul style="text-align: left; max-width: 600px; margin: 0 auto;">
-                    <br><li><strong>>Never Miss a Lead Again:</strong> Every call is answered instantly.</li>
+                    <br><li><strong>Never Miss a Lead Again:</strong> Every call is answered instantly.</li>
                     <li><strong>Appointments Booked for You:</strong> Customers schedule themselves-automatically.</li>
                     <li><strong>Pays for Iteself:</strong> Just <strong>1 booked job increases ROI</strong>.</li>
                 </ul>
@@ -119,7 +119,7 @@
     <!-- FOOTER / PRIVACY POLICY -->
     <footer>
         <p><strong>100% ROI Guarantee:</strong> If Missed Call Agent doesn't generate at least it's monthly cost in booked jobs within the first month, you don't pay.</p>
-        <p>© 2025 Missed Call Agent. All rights reserved.<br>Your privacy is important to us. We’ll only use your information to contact you about Missed Call Agent.</p>
+        <p><br><br>© 2025 Missed Call Agent. All rights reserved.<br>Your privacy is important to us. We’ll only use your information to contact you about Missed Call Agent.</p>
     </footer>
 
     <!-- JavaScript Functions -->
