changes text align from urgency message 1 - index.html

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <input type="hidden" id="timestamp" name="Timestamp"> <!-- Hidden field for timestamp -->
                     <button type="submit" class="cta-button">Submit</button> <!-- Submit button -->
                     <!-- Urgency Limited Spots number -->
-                    <div style="text-align: center; margin-top: 10px;">
+                    <div style="margin-top: 10px;">
                         <p id="spotsLeft" style="font-size: 18px; font-weight: bold; color: red;">
                             Only <span id="spots">100</span> Spots Left
                         </p>
