--- a/index.html
+++ b/index.html
@@ -73,14 +73,21 @@
                     <input name="Business Name" type="text" placeholder="Business Name*" required> <!-- Business Name input field -->
                     <input type="hidden" id="timestamp" name="Timestamp"> <!-- Hidden field for timestamp -->
                     <button type="submit" class="cta-button">Submit</button> <!-- Submit button -->
-                    <!-- Urgency Limited Spots number -->
+                    <!-- Urgency Limited Spots number 
                     <div style="margin-top: 10px;">
                         <p id="spotsLeft" style="font-size: 18px; font-weight: bold; color: red;">
                             Only <span id="spots">100</span> Spots Left
                         </p>
-                    </div>
+                    </div> -->
                     
                 </form>
+                
+                <!-- Urgency Limited Spots number -->
+                <div style="margin-top: 10px;">
+                    <p id="spotsLeft" style="font-size: 18px; font-weight: bold; color: red;">
+                        Only <span id="spots">100</span> Spots Left
+                    </p>
+                </div>
 
                 <!-- Hidden iframe prevents the form from reloading the page -->
                 <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
