--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="container">
             <!-- Left Column: Sign-up Form -->
             <div class="column text-column">
-                <h2>Get Early Access - Starts at $100/Month </h2> <!-- Urgency Limited Spots number --><p id="spotsLeft" style="font-size: 18px; font-weight: bold; color: red;">Only <span id="spots">100</span> Spots Left</p>
+                <h2>Get Early Access - Starts at $100/Month <!-- Urgency Limited Spots number --><p id="spotsLeft" style="font-size: 18px; font-weight: bold; color: red;">Only <span id="spots">100</span> Spots Left</p></h2>
                 <p><strong>Instantly answer calls, book customers, and recover lost revenue:</strong></p>
 
                 <!-- Form for collecting user data, submits to Google Sheets via Apps Script -->
@@ -86,12 +86,12 @@
                 <!-- Hidden iframe prevents the form from reloading the page -->
                 <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
                 
-                <!-- Urgency Limited Spots number -->
+                <!-- Urgency Limited Spots number 
                 <div style="margin-top: 10px;">
                     <p id="spotsLeft" style="font-size: 18px; font-weight: bold; color: red;">
                         Only <span id="spots">100</span> Spots Left
                     </p>
-                </div>
+                </div>-->
                 
                 <!-- Confirmation message displayed after form submission -->
                 <p id="confirmation-message" class="hidden">Your information has been submitted. Thanks for your interest in Missed Call Agent, we will get with you as soon as possible!</p>
