--- a/index.html
+++ b/index.html
@@ -63,7 +63,12 @@
         <div class="container">
             <!-- Left Column: Sign-up Form -->
             <div class="column text-column">
-                <h2>Get Early Access - Starts at $100/Month <!-- Urgency Limited Spots number --><p id="spotsLeft" style="font-size: 18px; font-weight: bold; color: red;">Only <span id="spots">100</span> Spots Left</p></h2>
+                <h2>Get Early Access - Starts at $100/Month 
+                    <span id="spotsLeft" style="font-size: 18px; font-weight: bold; color: red;">
+                        Only <span id="spots">100</span> Spots Left
+                    </span>
+                </h2>
+
                 <p><strong>Instantly answer calls, book customers, and recover lost revenue:</strong></p>
 
                 <!-- Form for collecting user data, submits to Google Sheets via Apps Script -->
